User interface for creating and listing webhooks.
An intial user interface for creating and listing webhooks, this
includes the ability to click a link to take you to the git repo.
A delete button is provided but the implementation will follow
under a separate PR.

Tests are also included.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,15 @@ vendor/
 
 # install script
 install/
+
+# node_modules
+node_modules/
+
+# dist
+dist/
+
+# Output of test coverage
+coverage/
+
+# Kodata
+cmd/extension/kodata/
