allow eventbindings and listeners to pass down labels

--- a/tekton-listener/hack/samples/eventbinding.yaml
+++ b/tekton-listener/hack/samples/eventbinding.yaml
@@ -3,6 +3,8 @@ kind: EventBinding
 metadata:
   name: test-event-binding
   namespace: tekton-pipelines
+  labels:
+    app: test-build-tekton-listener
 spec:
   serviceAccount: tekton-experimental-controller
   selector:
