--- a/tekton-listener/hack/samples/listener.yaml
+++ b/tekton-listener/hack/samples/listener.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tektonexperimental.dev/v1alpha1
 kind: TektonListener
 metadata:
   name: test-build-tekton-listener
