--- a/tekton-listener/config/050-namespace.yaml
+++ b/tekton-listener/config/050-namespace.yaml
@@ -11,15 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRoleBinding
+apiVersion: v1
+kind: Namespace
 metadata:
-  name: tekton-experimental-controller-admin
-subjects:
-  - kind: ServiceAccount
-    name: tekton-experimental-controller
-    namespace: tekton-experimental
-roleRef:
-  kind: ClusterRole
-  name: tekton-experimental-admin
-  apiGroup: rbac.authorization.k8s.io
+  name: tekton-experimental
