--- a/tekton-listener/config/100-eventbinding.yaml
+++ b/tekton-listener/config/100-eventbinding.yaml
@@ -15,9 +15,9 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: eventbindings.tekton.dev
+  name: eventbindings.tektonexperimental.dev
 spec:
-  group: tekton.dev
+  group: tektonexperimental.dev
   version: v1alpha1
   names:
     kind: EventBinding
