--- a/tekton-listener/config/100-serviceaccount.yaml
+++ b/tekton-listener/config/100-serviceaccount.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: tekton-experimental-controller
-  namespace: tekton-pipelines
+  namespace: tekton-experimental
