--- a/tekton-listener/config/config-logging.yaml
+++ b/tekton-listener/config/config-logging.yaml
@@ -16,7 +16,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: config-logging
-  namespace: tekton-pipelines
+  namespace: tekton-experimental
 data:
   # Common configuration for all knative codebase
   zap-logger-config: |
