--- a/webhooks-extension/package.json
+++ b/webhooks-extension/package.json
@@ -6,6 +6,9 @@
     "start": "http-server ./dist -p 9999",
     "build": "./build-it.sh",
     "build_ko": "./build-it.sh ./cmd/extension/kodata",
+    "eslint:check": "eslint --print-config . | eslint-config-prettier-check",
+    "lint": "eslint --ignore-path .eslintignore .",
+    "lint:fix": "npm run lint -- --fix",
     "test": "./test-it.sh"
   },
   "dependencies": {
@@ -21,9 +24,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@satazor/eslint-config": "^3.2.0",
     "@svgr/rollup": "^4.2.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.2",
     "babel-jest": "^24.7.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-react-app": "^7.0.0",
@@ -37,7 +41,7 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-watch": "^5.1.2",
     "fetch-mock": "^7.3.3",
@@ -47,7 +51,6 @@
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
     "react-app-polyfill": "^1.0.0",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
