--- a/webhooks-extension/package.json
+++ b/webhooks-extension/package.json
@@ -51,6 +51,7 @@
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-app-polyfill": "^1.0.0",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
