Update hash and WEB_RESOURCES_DIR for ko, remove Dockerfiles
Update to latest hash value and add additional presubmit test to check the hash in the release yaml. Point to the ko WEB_RESOURCES_DIR. Remove the Dockerfiles and document how to run tests without.

--- a/webhooks-extension/config/release/gcr-tekton-webhooks-extension.yaml
+++ b/webhooks-extension/config/release/gcr-tekton-webhooks-extension.yaml
@@ -40,7 +40,7 @@ spec:
           - name: DOCKER_REGISTRY_LOCATION
             value: DOCKER_REPO
           - name: WEB_RESOURCES_DIR
-            value: web
+            value: /var/run/ko
       serviceAccountName: tekton-dashboard
 ---
 # ------------------- Extension Service ------------------- #
