change taskrun service account

--- a/webhooks-extension/config/release/gcr-tekton-webhooks-extension.yaml
+++ b/webhooks-extension/config/release/gcr-tekton-webhooks-extension.yaml
@@ -146,6 +146,8 @@ spec:
         env:
         - name: INSTALLED_NAMESPACE
           value: tekton-pipelines
+        - name: SERVICEACCOUNT
+          value: tekton-webhooks-extension
       serviceAccountName: tekton-webhooks-extension
 ---
 # -- Monitor pipelinerun status and update the pull request -- #
