--- a/webhooks-extension/config/sink-kservice.yaml
+++ b/webhooks-extension/config/sink-kservice.yaml
@@ -23,3 +23,5 @@ spec:
         # TODO: Find better way to provide INSTALL_NAMESPACE since Knative does not support Downward API
         - name: INSTALLED_NAMESPACE
           value: "tekton-pipelines"
+        - name: SERVICEACCOUNT
+          value: tekton-webhooks-extension
