--- a/webhooks-extension/config/release/gcr-tekton-webhooks-extension.yaml
+++ b/webhooks-extension/config/release/gcr-tekton-webhooks-extension.yaml
@@ -174,7 +174,9 @@ spec:
       - name: dashboard-url
         description: The URL to the pipelineruns page of the dashboard
         default: "http://localhost:9097/"
-      # This can be deleted after pending status change
+      # This can be deleted after pending status change issue is resolved, that being that AFAIK the pull request resource only modifies
+      # status once everything is complete, so we can only modify status via the pull request resource once.  To get around this we hit
+      # the github status URL to set the status into pending and use this secret to during that request.  
       - name: secret
         description: The secret containing the access token to access github
       # Up to here
@@ -194,7 +196,7 @@ spec:
         value: ${inputs.params.commentfailure}
       - name: URL
         value: ${inputs.params.dashboard-url}
-      # This can be deleted after pending status change
+      # This can be deleted after any fix to the above mentioned pending status change
       - name: GITHUBTOKEN
         valueFrom:
           secretKeyRef:
@@ -213,7 +215,8 @@ spec:
       api_instance = client.CustomObjectsApi(client.ApiClient(client.Configuration()))
       gitPRcontext = "Tekton"
       gitPRurl = ""
-      # Some code to rip out later to update status to pending
+      # This is the code thats puts the pullrequest into pending status, this is code to rip out later if there
+      # is a fix to the above mentioned update status to pending issue.
       with open("/workspace/pull-request/github/pr.json") as fp:
         rawdata = json.load(fp)
         statusurl = rawdata['statuses_url']
@@ -281,17 +284,17 @@ spec:
                  "Status | Pipeline | PipelineRun | Namespace\n"
                  ":----- | :------- | :--------------- | :--------\n"
                  ) + "\n".join(results)
+      handle = open("/workspace/pull-request/comments/newcomment.json", 'w')
+      handle.write(comment)
+      handle.close()
       if not "$URL".startswith("http"):
         detailsURL = "http://" + "$URL" + "/#/pipelineruns"
       else:
         detailsURL = "$URL" + "/#/pipelineruns"
       print("Set details url to: " + detailsURL)
-      with open("/workspace/pull-request/pr.json", 'r') as pr_file:
-          data = json.load(pr_file)
-          data['Comments'].append(dict(text=comment))
-          data['Statuses'].append(dict(code=gitPRcode, description=gitPRdescription, id=gitPRcontext, url=detailsURL))
-      os.rename("/workspace/pull-request/pr.json", "/workspace/pull-request/pr.json.backup")
-      with open("/workspace/pull-request/pr.json", 'w') as pr_file:
-          json.dump(data, pr_file)
+      status = json.dumps(dict(code=gitPRcode, description=gitPRdescription, id=gitPRcontext, url=detailsURL))
+      handle = open("/workspace/pull-request/status/newstatus.json", 'w')
+      handle.write(status)
+      handle.close()
       EOF
 ---
