Add Tekton Task and TaskRun to create and delete Routes

--- a/webhooks-extension/config/latest/openshift-tekton-webhooks-extension.yaml
+++ b/webhooks-extension/config/latest/openshift-tekton-webhooks-extension.yaml
@@ -12,6 +12,14 @@ metadata:
   name: tekton-webhooks-extension-minimal
   namespace: tekton-pipelines
 rules:
+- apiGroups: 
+  - route.openshift.io
+  resources: 
+  - routes
+  verbs:
+  - get
+  - create
+  - delete
 - apiGroups:
   - security.openshift.io
   resources:
