--- a/webhooks-extension/tekton/release-pipeline.yml
+++ b/webhooks-extension/tekton/release-pipeline.yml
@@ -38,11 +38,11 @@ spec:
         name: publish-tekton-webhooks-extension
       params:
         - name: pathToProject
-          value: ${params.package}
+          value: $(params.package)
         - name: versionTag
-          value: ${params.versionTag}
+          value: $(params.versionTag)
         - name: imageRegistry
-          value: ${params.imageRegistry}
+          value: $(params.imageRegistry)
       resources:
         inputs:
           - name: source
