--- a/webhooks-extension/config/openshift/openshift-tekton-webhooks-extension-release.yaml
+++ b/webhooks-extension/config/openshift/openshift-tekton-webhooks-extension-release.yaml
@@ -1,3 +1,257 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  labels:
+    app: tekton-webhooks-extension
+  name: tekton-webhooks-extension
+  namespace: tekton-pipelines
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tekton-webhooks-extension-minimal
+  namespace: tekton-pipelines
+rules:
+- apiGroups:
+  - security.openshift.io
+  resources:
+  - securitycontextconstraints
+  verbs:
+  - use
+- apiGroups:
+  - ""
+  resources:
+  - serviceaccounts
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  - services
+  verbs:
+  - get
+  - list
+  - create
+  - update
+  - delete
+  - patch
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - pods/log
+  - namespaces
+  - events
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  - configmaps
+  verbs:
+  - get
+  - list
+  - create
+  - delete
+  - update
+  - watch
+- apiGroups:
+  - extensions
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - get
+  - list
+  - create
+  - update
+  - delete
+  - patch
+  - watch
+- apiGroups:
+  - tekton.dev
+  resources:
+  - tasks
+  - clustertasks
+  - taskruns
+  - pipelines
+  - pipelineruns
+  - pipelineresources
+  verbs:
+  - get
+  - list
+  - create
+  - update
+  - delete
+  - patch
+  - watch
+- apiGroups:
+  - tekton.dev
+  resources:
+  - taskruns/finalizers
+  - pipelineruns/finalizers
+  verbs:
+  - get
+  - list
+  - create
+  - update
+  - delete
+  - patch
+  - watch
+- apiGroups:
+  - tekton.dev
+  resources:
+  - tasks/status
+  - clustertasks/status
+  - taskruns/status
+  - pipelines/status
+  - pipelineruns/status
+  verbs:
+  - get
+  - list
+  - create
+  - update
+  - delete
+  - patch
+  - watch
+- apiGroups:
+  - sources.eventing.knative.dev
+  resources:
+  - githubsources
+  verbs:
+  - get
+  - list
+  - create
+  - update
+  - delete
+  - patch
+  - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tekton-webhooks-extension-minimal
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: tekton-webhooks-extension-minimal
+subjects:
+- kind: ServiceAccount
+  name: tekton-webhooks-extension
+  namespace: tekton-pipelines
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: webhooks-extension
+  name: webhooks-extension
+  namespace: tekton-pipelines
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: webhooks-extension
+  template:
+    metadata:
+      labels:
+        app: webhooks-extension
+    spec:
+      containers:
+      - env:
+        - name: PORT
+          value: "8080"
+        - name: INSTALLED_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: DOCKER_REGISTRY_LOCATION
+          value: DOCKER_REPO
+        - name: WEB_RESOURCES_DIR
+          value: web
+        # Set this at install time after creating a certificate, e.g. with openssl and the provided convenience script.
+        # A secret will be created and this name should be provided here.
+        # This secret name will then be picked up by the Go code that is responsible for 
+        # creating the EventListener, Ingress and webhooks.
+        # The Ingress will be created with the tls secret name value set to this variable's value.
+        - name: TRIGGERS_PROTOTYPE_INGRESS_CERTIFICATE_SECRET_NAME
+          value: ""
+        image: github.com/tektoncd/experimental/webhooks-extension/cmd/extension
+        imagePullPolicy: Always
+        livenessProbe:
+          httpGet:
+            path: /liveness
+            port: 8080
+        name: webhooks-extension
+        ports:
+        - containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /readiness
+            port: 8080
+      serviceAccountName: tekton-webhooks-extension
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    tekton-dashboard-bundle-location: web/extension.a1be58d0.js
+    tekton-dashboard-display-name: Webhooks
+    tekton-dashboard-endpoints: webhooks.web
+  labels:
+    app: webhooks-extension
+    tekton-dashboard-extension: "true"
+  name: webhooks-extension
+  namespace: tekton-pipelines
+spec:
+  ports:
+  - port: 8080
+    targetPort: 8080
+  selector:
+    app: webhooks-extension
+  type: NodePort
+
+---
+apiVersion: serving.knative.dev/v1alpha1
+kind: Service
+metadata:
+  labels:
+    app: webhooks-extension-sink
+  name: webhooks-extension-sink
+  namespace: tekton-pipelines
+spec:
+  template:
+    spec:
+      containers:
+      - env:
+        - name: INSTALLED_NAMESPACE
+          value: tekton-pipelines
+        - name: SERVICEACCOUNT
+          value: tekton-webhooks-extension
+        - name: PLATFORM
+          value: openshift
+        image: github.com/tektoncd/experimental/webhooks-extension/cmd/sink
+        imagePullPolicy: Always
+        livenessProbe:
+          httpGet:
+            path: /liveness
+        ports:
+        - containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /readiness
+      serviceAccountName: tekton-webhooks-extension
+
+---
 # Monitor the pipelinerun status and update the pull request
 apiVersion: tekton.dev/v1alpha1
 kind: Task
